modified:   easy-snake/game.html 	modified:   easy-snake/game.js 	renamed:    easy-snake/game.css -> hard-snake/game.css 	new file:   hard-snake/game.html 	new file:   hard-snake/game.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
 
                 </div>
-                <div class="locked-card card-item">
+                <div class="card-item">
                     <div class="card-title">
                         <span>Zor</span>
                     </div>
@@ -67,7 +67,7 @@
                             <p>Yılan hızlı, duvarlara çarpınca ölüyor ve elmayı alması için süre var o süre içerisinde
                                 elmayı almak zorundasın.(Kapalı)</p>
                         </div>
-                        <div class="card-button">
+                        <div class="card-button"  onclick="location.href='hard-snake/game.html'">
                             <a class="btn" href="#">Oyna</a>
                         </div>
                     </div>
